# StackBadger

./: .env.example  .gitattributes  .gitignore  AUTHORIZATION.example.md  CLAUDE.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  SECURITY.md  branch_db.py  discover-prompt.md  discover.py  doctor.py  exclusions.py  profile.py  profile_assembler.py  providers.py  provision_accounts.py  pyproject.toml  run.sh  teardown.py
.claude/: settings.json
.github/: pip-audit-allowlist.txt
auth/: __init__.py  base.py  clerk.py  firebase.py  nextauth.py  supabase_auth.py
fixtures/: .gitignore  README.md  generate_oversized.py  records.csv  records_injection.csv  records_malformed.csv  ssrf_targets.txt  xxe_classic.xml  xxe_oob.xml
profiles/: clerk-supabase-example.yaml  firebase-example.yaml  nextauth-example.yaml  paddle-lemonsqueezy-example.yaml  s3-r2-example.yaml  supabase-auth-example.yaml
reports/: __init__.py  agent_template.json.j2  aggregate.py  crosswalk.py  human_template.html.j2  ledger.py  manifest.py  scrub.py
scripts/: pip_audit_allowlist.py
tests/: __init__.py  conftest.py  helpers.py  shell_harness.py  test_aggregate.py  test_anon_session.py  test_api_surface.py  test_asvs_tag_lint.py  test_auth_bypass.py  test_auth_flows.py  test_authorization_gate.py  test_branch_db.py  test_business_logic.py  test_business_logic_profile_schema.py  test_clerk_fapi.py  test_confirm_target.py  test_cors_headers.py  test_crosswalk.py  test_data_protection.py  test_derive_or_skip_contract.py  test_detect_auth_provider.py  test_discover.py  test_discover_live.py  (+39 more)
(+8 files in other folders)
