[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stackbadger"
version = "1.0.0"
description = "StackBadger — portable, profile-driven black-box API security harness"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "pytest-asyncio>=0.23",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--json-report --json-report-file=report.json -v"

[tool.hatch.build.targets.wheel]
packages = ["."]
